# gef-ml

./: .gitignore  Dockerfile.download  README.md  docker-compose.yaml  pyproject.toml
data/: download_files.py  ieo_private_sector_analysis.xlsx  involvement_results.csv  involvement_results_1.csv  involvement_results_v2.csv  involvement_summaries.csv  involvement_summaries_2.csv  involvement_summaries_doc_types.csv  project_ids.json
gef_ml/: ingestion.py
gef_ml/inference/: __init__.py  descriptions.py  private_sector.py  prompts.py
gef_ml/ingestion/: __init__.py  embedding_service.py  pipeline.py  streaming_ingestion.py  text_cleaner.py
gef_ml/utils/: __init__.py  base.py  log_config.py  qdrant.py
notebooks/: cleaning.ipynb  ingest_data.ipynb  llama_parse.ipynb  pdf9336_1.md  pdf9345_1.md  pdf_parse.ipynb
payment deliverables/: 01 download script.txt  02 document loading.txt  03 robust embeddings.txt  04 embedding generation.txt  05 Fast StreamingIngestion.txt  06 naive tree summarize.txt  07 first results csv.txt  08 inference improvements.txt
scripts/: determine_involvement.py  download_files.py  ingestion_script.py  project_ids.py  projects.csv
