[tool.poetry]
name = "gef-ml"
version = "0.1.0"
description = ""
authors = ["Sawyer <sawyer@teamculture.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
llama-index-core = "^0.10.12"
llama-index-embeddings-together = "^0.1.2"
llama-index-llms-together = "^0.1.3"
llama-index-vector-stores-qdrant = "^0.1.3"
llama-index-readers-file = "^0.1.6"
python-dotenv = "^1.0.1"
together = "^0.2.11"
ratelimit = "^2.2.1"
ratelimiter = "^1.2.0.post0"
aiolimiter = "^1.1.0"
aiometer = "^0.5.0"
backoff = "^2.2.1"
aiohttp = "^3.9.3"
docx2txt = "^0.8"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipykernel = "^6.29.2"

[tool.poetry.group.dask.dependencies]
dask = "^2024.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
